bppackaging/src/objects/Labour_Code__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>A checkbox to indicate if the code is active.  Default is Yes</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicable_Tax__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicable Tax</label>
        <referenceTo>Sales_Tax__c</referenceTo>
        <relationshipLabel>Labour Codes</relationshipLabel>
        <relationshipName>Labour_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CO_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Header</label>
        <referenceTo>CO_Header__c</referenceTo>
        <relationshipLabel>Labour Codes</relationshipLabel>
        <relationshipName>Labour_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Required - A lookup of defined categories with a Type = Labour</description>
        <label>Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Category__c.Type__c</field>
                <operation>equals</operation>
                <value>Labour</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Labour Codes</relationshipLabel>
        <relationshipName>Labour_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>Required - A unique identifier for the Labour Code created by the user.</description>
        <label>Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checkbox to indicate that the Rate defined on the Labour Code is used at all times, instead of being set by the applicable Price Level (customer, warranty vendor, system default, etc).</description>
        <label>Fixed Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <defaultValue>1.0</defaultValue>
        <description>A numeric value with 1 decimal place.  Default value is 1</description>
        <label>Hours</label>
        <precision>6</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Labour Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <description>A dollar value with 2 decimal places</description>
        <label>Rate</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF( Active__c = TRUE, &apos;Active&apos; , &apos;Inactive&apos;)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>A checkbox to indicate if the code is taxable.  Default is selected.</description>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>Hours__c * Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Labour Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Category__c</columns>
        <columns>Code__c</columns>
        <columns>CO_Header__c</columns>
        <columns>Description__c</columns>
        <columns>Fixed_Rate__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LC-{00000000}</displayFormat>
        <label>Labour Code Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Labour Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>